--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<script src="scripts/jquery.min.js"></script>
   <script src="scripts/underscore/underscore-min.js"></script>
   <script src="scripts/backbone/backbone.js"></script>
+	<script src="scripts/backbone/backbone.nopersistence.js"></script>
 	<script type="text/template" id="tweet-template">
 		<div class="avatar"></div>
 		<div class="content">
