added tweet counter

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<h1>vsTwitter</h1>
 		<div class="tweet-box">
 			<textarea id="tweet-message"></textarea>
+			<span id="tweet-count"></span>
 			<button class="submit">Submit</button>
 		</div>
 		<ul id="tweets-container"></ul>
