created css stylesheet and basic styling

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 		</div>
 	</script>
 	<script src="scripts/vstwitter.js"/></script>
+	<link rel="stylesheet" href="styles/style.css"/>
 	<title>vs.twitter</title>
 
 </head>
 <body>
 	<div id="app">
-		<h1>vsTwitter</h1>
+		<h1>vs.twitter</h1>
 		<div class="tweet-box">
 			<textarea id="tweet-message"></textarea>
 			<span id="tweet-count"></span>
