created tweet box styles

--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
 <body>
 	<div id="app">
 		<h1>vs.twitter</h1>
-		<div class="tweet-box">
+		<div id="tweet-box">
 			<textarea id="tweet-message"></textarea>
-			<span id="tweet-count"></span>
-			<button class="submit">Submit</button>
+			<footer class="actions">
+				<span id="tweet-count"></span>
+				<button class="submit">Submit</button>
+			</footer>
 		</div>
 		<ul id="tweets-container">
 		</ul>
