toggle display and edit user view

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 	<div id="app">
 		<h1>vs.twitter</h1>
 		<div id="user-box">
-			<div class="display">
-				<div class="avatar default"></div>
-				<div class="name">John Doe</div>
+			<div class="display-user">
+				<div class="avatar"></div>
+				<div class="username"></div>
+				<a class="open-edit">▼</a>
 			</div>
-			<div class="edit">
+			<div class="edit-user">
 				<fieldset id="username_fieldset">
 					<label for="username">Username</label>
 					<div class="values">
